# txt-to-table-llm

./: LICENSE  README.md  pyproject.toml
schema/: sample_profile_schema.json
src/: app_constants.py  main.py
src/prompts/: my_prompt.py
src/schema/: candidate_profile.py
